--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,13 @@
       <artifactId>spring-context</artifactId>
       <version>${springframework.version}</version>
     </dependency>
+    <!-- javax.annotation-api is not included in Java 9+ -->
+    <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+      <version>1.3.2</version>
+    </dependency>
+
   </dependencies>
   <build>
     <pluginManagement>
@@ -34,8 +41,8 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.2</version>
           <configuration>
-            <source>1.8</source>
-            <target>1.8</target>
+            <source>17</source>
+            <target>17</target>
           </configuration>
         </plugin>
       </plugins>
