--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <url>http://maven.apache.org</url>
 
   <properties>
-    <springframework.version>5.2.25.RELEASE</springframework.version>
+    <springframework.version>5.3.30</springframework.version>
   </properties>
 
   <dependencies>
